--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.github.WinterAlexander</groupId>
             <artifactId>gdx-utils</artifactId>
-            <version>b247784c39</version>
+            <version>6.15.0</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
